--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,10 @@
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.0"
+    "multer": "^2.0.1",
+    "path": "^0.12.7",
+    "pg": "^8.16.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
