--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 JWT_SECRET=Qw3rT!9zX$2pL@8vB#7nM^6sD&1kJ*4hG
 TELEGRAM_BOT_TOKEN=8153190530:AAFrYTEQp7mVsivYbqboZbFVfhZcP07OmQQ
 TELEGRAM_CLOUD_CHAT_ID=-4866712826
+PORT=3001
+FRONTEND_URL=http://localhost:5173
